Fix: Footer on tablet is not full width

--- a/assets/scss/theme/_layout.scss
+++ b/assets/scss/theme/_layout.scss
@@ -43,6 +43,13 @@ $containers: '.site-header, body:not([class*="elementor-page-"]) .site-main, .si
 			max-width: 100%;
 		}
 	}
+
+	.site-footer {
+
+		&.footer-full-width {
+			max-width: 100%;
+		}
+	}
 }
 
 @media (min-width: $screen-md) {
